docs reveal align fix

--- a/src/styles/forms-reveal.css
+++ b/src/styles/forms-reveal.css
@@ -30,5 +30,5 @@ Note :after are not alllowed in <input>
 	font-style: normal;
 	font-size: 1.0em;
 	position: relative;
-	top:.1em;
+	top:-0.2em;
 }
